fixed textareas having no scrollbar, added a prod deploy command

--- a/client/sass/components/_mentionsInput.scss
+++ b/client/sass/components/_mentionsInput.scss
@@ -8,13 +8,11 @@
   display: block;
   padding: 15px;
   border-radius:0;
-  overflow: hidden;
   background: #fff;
   position: relative;
   outline: 0;
   margin-bottom: 10px;
   margin-top: 0px;
-  resize: none;
 
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
